Fix WebVR getDevices promise not resolving when VR Services are not compatible.

Adds a check for initialization before GvrDeviceProvider adds a device.

Adding a device without the library in place (succesful initialization) makes the promise hang waiting for a device connected event which never happens.

BUG=693298

Review-Url: https://codereview.chromium.org/2705653005
Cr-Commit-Position: refs/heads/master@{#451847}

Former-commit-id: dd47ba396451348cc15ecbc53255cb618e457414